--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
